@@ -1,4 +1,5 @@
 - Refactor: Remove usage of execution degree finder by academic interval [#qubIT-Fenix-1590]
+- Refactor: Declare property in DML for academic treasury event, to record the academic process number. To be used with the custom academic debt (WIP) [#qubIT-Fenix-4756]
 
 11.3.2 (18-12-2023)
 - Improvement: Adds fenixedu OSS DM [#qubIT-Omnis-4736]
